feat: temporary addition of side project

--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <html>
     <head>
         <title>kou's github page</title>
+        <style>
+            a:link {
+                text-decoration: inherit;
+                color: inherit;
+                cursor: auto;
+            }
+
+            a:visited {
+                text-decoration: inherit;
+                color: inherit;
+                cursor: auto;
+            }
+        </style>
     </head>
     <body style="color: white;  background-color: #c77666; overflow: hidden; height: 100vh; flex-direction: column; display: flex; justify-content: center; align-items: center">
         <div style="height: 600px; width: 800px;">
-        <div style="box-shadow: 0 0 10px #0000007f; border: 4px ridge #e6c9be; z-index:4; position: absolute; height: 600px; width: 800px; display:flex; flex-direction: column; justify-content: flex-end; padding: 8px; box-sizing: border-box">
-            <div style="display:flex; align-items: end">
-                <div style="border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f;">
-                    <div style="width:100%; border-bottom: 4px ridge #e6c9be; background-color: #c77666; padding: 0px 5px; box-sizing: border-box; box-shadow: inset 0 0 2px black;">Kou (Programmer)</div>
-                    <img style="box-shadow: inset 0 0 10px black;" src="./assets/28.png">
-                </div>
-                <div style="border: 1px solid black; height: 130px; flex:1; border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f;">
-                    <div style="width:100%; height:100%; background-color:rgba(11, 57, 95, 0.57); padding: 5px 10px; box-sizing: border-box; box-shadow: inset 0 0 10px black; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Oh my V8 Engine!</div>
+        <a href="projects/payung-event-editor/index.html">
+            <div style="box-shadow: 0 0 10px #0000007f; border: 4px ridge #e6c9be; z-index:4; position: absolute; height: 600px; width: 800px; display:flex; flex-direction: column; justify-content: flex-end; padding: 8px; box-sizing: border-box">
+                <div style="display:flex; align-items: end">
+                    <div style="border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f;">
+                        <div style="width:100%; border-bottom: 4px ridge #e6c9be; background-color: #c77666; padding: 0px 5px; box-sizing: border-box; box-shadow: inset 0 0 2px black;">Kou (Programmer)</div>
+                        <img style="box-shadow: inset 0 0 10px black;" src="./assets/28.png">
                     </div>
+                    <div style="border: 1px solid black; height: 130px; flex:1; border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f;">
+                        <div style="width:100%; height:100%; background-color:rgba(11, 57, 95, 0.57); padding: 5px 10px; box-sizing: border-box; box-shadow: inset 0 0 10px black; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Oh my V8 Engine!</div>
+                        </div>
+                </div>
             </div>
-        </div>
+        </a>
         <div style="z-index:2; position: absolute; height: 600px; width: 800px; display:flex; flex-direction: column; padding: 8px; box-sizing: border-box">
             <div style="width: 580px; height: 330px; border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f; background-color:rgba(11, 95, 77, 0.64); display: flex; flex-direction:column">
                 <div style="width:100%; border-bottom: 4px ridge #e6c9be; background-color: #c77666; padding: 0px 5px; box-sizing: border-box; box-shadow: inset 0 0 2px black;">Github Statistics
@@ -36,7 +51,6 @@
                     <div >[PHP]</div>
                     <div style="width: 100%; height: 100px; display:  flex; justify-content: center; align-items: center">
                         <i>good at making oden</i>
-                        <!-- <img styzzzzzzzzzzzzzle="transform: scale(0.8)" src="https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api/top-langs/?username=kouhime&theme=moltack&layout=compact"> -->
                     </div>
                 </div>
             </div>
