--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body style="color: white;  background-color: #c77666; overflow: hidden; height: 100vh; flex-direction: column; display: flex; justify-content: center; align-items: center">
         <div style="height: 600px; width: 800px;">
-        <a href="projects/payung-event-editor/index.html">
+        <a href="#">
             <div style="box-shadow: 0 0 10px #0000007f; border: 4px ridge #e6c9be; z-index:4; position: absolute; height: 600px; width: 800px; display:flex; flex-direction: column; justify-content: flex-end; padding: 8px; box-sizing: border-box">
                 <div style="display:flex; align-items: end">
                     <div style="border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f;">
@@ -34,7 +34,7 @@
             <div style="width: 580px; height: 330px; border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f; background-color:rgba(11, 95, 77, 0.64); display: flex; flex-direction:column">
                 <div style="width:100%; border-bottom: 4px ridge #e6c9be; background-color: #c77666; padding: 0px 5px; box-sizing: border-box; box-shadow: inset 0 0 2px black;">Github Statistics
                 </div>
-                <div style="box-shadow: inset 0 0 10px black; width; 100%; flex: 1; padding: 12px">
+                <div style="box-shadow: inset 0 0 10px black; width: 100%; flex: 1; padding: 12px">
                     <div style="display:flex; gap:6px;">
                         <div style="border: 4px ridge #e6c9be; box-shadow: 0 0 10px #0000007f; width: 100px; height: 100px; background-image: url(./assets/28.png); background-size: cover">
                         </div>
